@@ -31,10 +31,17 @@
       extraHeaderItem=App.ExtraTableButtonsView
       statusMessage=statusMessage
 
+      enableSearch=true
       enablePagination=true
+      enableSort=true
 
       pageNumBinding='pageNum'
       rowCountBinding='rowCount'
+
+      searchTextBinding='searchText'
+
+      sortColumnIdBinding='sortColumnId'
+      sortOrderBinding='sortOrder'
     }}
   {{else}}
     <h1>No records available!</n1>
