@@ -9,6 +9,7 @@ INCOMPATIBLE CHANGES
   TEZ-1993. Implement a pluggable InputSizeEstimator for grouping fairly
 
 ALL CHANGES:
+  TEZ-2273. Tez UI: Support client side searching & sorting for dag tasks page
   TEZ-1909. Remove need to copy over all events from attempt 1 to attempt 2 dir
   TEZ-2223. TestMockDAGAppMaster fails due to TEZ-2210 on mac.
   TEZ-2236. Tez UI: Support loading of all tasks in the dag tasks page
